--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+:root {
+  --card-clr: #f9fafb;
+  --bg-clr: #01121f;
+  --blue: #0b2942;
+  --yellow-clr: #d97706;
+  --purple-clr: #3b0764;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -6,27 +14,12 @@
 
 body {
   height: 100vh;
+  font-family: 'Roboto', sans-serif;
+  line-height: 1.5;
   display: grid;
   grid-template-columns: 1fr 5fr;
   grid-template-rows: 1fr 6fr;
-}
-
-.header {
-  grid-column: 2 /3;
-  background-color: aqua;
-}
-
-.aside {
-  background-color: bisque;
-  grid-row: 1 / 3;
-}
-
-.main {
-  background-color: aquamarine;
-}
-
-.card-project {
-  background-color: blueviolet;
+  color: var(--card-clr);
 }
 
 .user-image {
@@ -37,4 +30,230 @@ body {
   overflow: hidden;
   border: 1px solid black;
   cursor: pointer;
+}
+
+.header {
+  grid-column: 2 /3;
+  background-color: var(--blue);
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 1fr 2fr;
+  padding: 20px 30px 10px;
+}
+
+.search-bar {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+.search-bar input {
+  margin-left: 10px;
+  min-width: 80%;
+  border: none;
+  border-radius: 10px;
+  padding: 6px;
+}
+
+.users-profile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+}
+
+.user-name {
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.user-header {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 15px;
+}
+
+.user-header > img {
+  width: 60px;
+  height: 60px;
+}
+
+.welcome {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.user-header-name {
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.user-action {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.btn {
+  padding: 12px 40px;
+  border: none;
+  border-radius: 20px;
+  color: var(--card-clr);
+  font-weight: bold;
+  background-color: var(--yellow-clr);
+  transition: transform 0.3s ease, background-color 0.3s ease;
+}
+
+.btn:hover {
+  background-color: rgba(129, 115, 115, 0.759);
+  transform: scale(1.1);
+}
+
+.aside {
+  background-color: var(--bg-clr);
+  border-right: 1px solid var(--card-clr);
+  grid-row: 1 / 3;
+  display: flex;
+  flex-direction: column;
+  padding: 20px 30px;
+  position: sticky;
+  top: 0;
+  height: 100%;
+  z-index: 1;
+}
+
+.aside-title {
+  display: flex;
+  align-items: center;
+  font-size: 32px;
+  margin-bottom: 20px;
+  gap: 0.3125rem;
+}
+
+.aside-option {
+  display: flex;
+  flex-wrap: wrap;
+  text-decoration: none;
+  margin: 20px 0;
+  gap: 0.625rem;
+  color: var(--card-clr);
+  padding: 8px;
+  border-radius: 12px;
+
+  transition: background-color 0.3s ease;
+}
+
+.aside-option.settings {
+  margin-top: 50px;
+}
+
+.aside-option:hover {
+  background-color: var(--blue);
+  color: whitesmoke;
+}
+
+.main {
+  display: flex;
+  gap: 1.25rem;
+  padding: 20px;
+  background-color: var(--bg-clr);
+}
+
+.user-projects {
+  flex: 3;
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
+.cards-projects {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(375px, 1fr));
+  grid-auto-rows: 1fr;
+  gap: 20px;
+}
+
+.user-projects h2 {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.card-project {
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  height: 100%;
+  border-left: 8px solid var(--yellow-clr);
+  overflow: hidden;
+  border-radius: 10px;
+  color: var(--white-clr);
+  font-size: 14px;
+  transition: transform 0.3s ease;
+}
+
+.card-project:hover {
+  transform: scale(1.025);
+}
+
+.card-options {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  margin-top: 30px;
+  gap: 1rem;
+}
+
+.opt {
+  color: var(--card-clr);
+}
+
+.card-project {
+  background-color: #3b0764;
+}
+
+.card-project p {
+  flex: 1;
+}
+
+.side-bar-info {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
+
+.announcements {
+  display: grid;
+  grid-template-rows: repeat(3, 123px);
+  gap: 12px;
+  background-color: var(--blue);
+  padding: 20px;
+  border-radius: 12px;
+}
+
+.announcements > div:not(:last-child) {
+  border-bottom: 1px solid var(--yellow-clr);
+}
+
+.trending {
+  display: grid;
+  grid-template-rows: auto repeat(4, 1fr);
+  gap: 12px;
+}
+
+.users-card-trending {
+  background-color: var(--blue);
+  padding: 20px;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  gap: 25px;
+}
+
+.user-card {
+  display: flex;
+  gap: 0.75rem;
 }
